# ChangeLog for dev-util/scons
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.56 2008/05/29 13:41:17 hawking Exp $

*scons-0.98.4 (29 May 2008)

  29 May 2008; Ali Polatel <hawking@gentoo.org> -scons-0.96.1.ebuild,
  -scons-0.96.94.ebuild, +scons-0.98.4.ebuild:
  Version bump. Drop old.
