@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/scons
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.56 2008/05/29 13:41:17 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.57 2008/06/14 11:45:06 zmedico Exp $
+
+  14 Jun 2008; Zac Medico <zmedico@gentoo.org> scons-0.97.ebuild,
+  scons-0.98.3.ebuild, scons-0.98.4.ebuild:
+  Bug #226505 - For compatibity with phase execution order in
+  >=portage-2.1.5, call has_version inside pkg_preinst instead of
+  pkg_postinst.
 
 *scons-0.98.4 (29 May 2008)
 
